[package]
name = "simple_lib"
version = "0.1.0"
authors = ["Dave Hylands <davehylands@fullstory.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7"

[lib]
name = "simple_lib"
# rustc cannont create dylibs for iOS.
# https://github.com/rust-lang/rust/issues/21727#issuecomment-424026535
crate-type = ["staticlib"]

